# aoc2022

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
01/: 01_solution.ipynb  01_task.txt  solution_1.py  solution_2.py  task.txt
02/: 02_solution.ipynb  solution_1.py  solution_2.py  task.txt
03/: 03_solution.ipynb  03_task.txt  solution_1.py  solution_2.py
04/: 04_solution.ipynb  04_task.txt  solution_1.py  solution_2.py
05/: 05_solution.ipynb  solution_1.py  solution_2.py  task.txt  utils.py
06/: solution_1.py  solution_2.py  task.txt
07/: solution_1.py  solution_2.py  task.txt
08/: solution_1.py  solution_2.py  task.txt
09/: solution_1.py  solution_2.py  task.txt
10/: solution_1.py  solution_2.py  task.txt
11/: solution_1.py  solution_2.py  task.txt  utils.py
12/: solution_1.py  solution_2.py  task.txt  utils.py
13/: input_test_2.txt  solution_1.py  solution_2.py  task.txt  utils.py
14/: solution_1.py  solution_2.py  task.txt  utils.py
15/: input_test_3.txt  solution_1.py  solution_2.py  task.txt  utils.py
16/: net.html  net_input.html  net_input_test_1.html  solution_1.py  solution_1_old_a.py  solution_1_old_b.py  solution_2.py  task.txt  understanding.ipynb  utils.py  visualization.ipynb
17/: solution_1.py  solution_2.ipynb  solution_2.py  utils.py
18/: input_test_2.txt  input_test_3.txt  input_test_4.txt  input_test_5.txt  input_test_6.txt  solution_1.py  solution_2.py  task.txt  utils.py
19/: solution_1.py  solution_2.py  task.txt
20/: solution_1.py  solution_2.py  task.txt
21/: solution_1.py  solution_2.py  task.txt  (+1 more)
(+14 files in other folders)
