[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Julius Kittler"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
numpy = "^1.23.5"
scikit-learn = "^1.1.3"
scipy = "^1.9.3"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
