[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = "Solutions for Advent of Code 2022."
authors = ["Julius Kittler"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
